Preparing the ambient
Preparing the ambient:

1 - installing some dependencies such as material UI

2 - Deliting the initial page (page.tsx)

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,20 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
+html,
+body,
+#root,
+.app{
+  height: 100%;
+  width: 100%;
+  font-size: small;
+  background-color: #140420;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
