--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -17,4 +17,6 @@ body,
 	font-size: small;
 	background-color: #000000;
 	font-family: Arial, Helvetica, sans-serif;
+	@apply bg-white;
+	@apply dark:bg-black;
 }
