--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -21,24 +21,7 @@ body,
 	@apply dark:bg-black;
 }
 
-/* TIMELINE STYLING 
-.timeline ._3eULf {
-	@apply text-center;
-}
-
-.timeline ._3_ygE {
-	@apply rounded-tl-md border border-r-0 dark:border-stroke-dark;
-}
-.timeline ._3ZbQT {
-	@apply text-center dark:border-stroke-dark;
-}
-.timeline ._34SS0 {
-	@apply dark:bg-dark-secundary;
-}
-
-
-
-*/
+/* TIMELINE STYLING */
 .timeline ._3eULf {
 	@apply text-center;
 }
@@ -57,34 +40,27 @@ body,
 .timeline ._3lLk3 {
 	@apply border dark:border-stroke-dark dark:fill-[#1d1f21];
 }
-.timeline ._2dZTy:nth-child(even) {
-	@apply dark:bg-dark-bg;
-}
-.timeline ._35nLX {
-	@apply dark:fill-[#1d1f21] dark:stroke-stroke-dark;
+.timeline ._35nLX,
+.timeline ._3T42e {
+	@apply border dark:fill-[#1d1f21] dark:stroke-stroke-dark;
 }
 .timeline ._9w8d5 {
-	@apply fill-[#333] dark:fill-white;
+	@apply fill-[#1d1f21] dark:fill-white;
 }
 .timeline ._34SS0 {
-	@apply bg-white dark:fill-[#1d1f21];
+	@apply bg-white dark:bg-[#1d1f21];
 }
-.timeline ._34SS0:nth-of-type(even) {
-	@apply bg-white dark:fill-[#1d1f21];
-}
+
 .timeline ._RuwuK,
 .timeline ._3rUKi,
 .timeline ._1rLuZ {
-	@apply dark:stroke-stroke-dark;
+	@apply text-white dark:stroke-stroke-dark;
 }
 .timeline ._3ZbQT {
 	@apply text-center border-[#e6e4e4] dark:border-stroke-dark;
 }
-.timeline ._3T42e {
-	@apply dark:fill-[#1d1f21];
-}
-.timeline ._29NTg {
-	@apply dark:text-neutral-500;
+.timeline .calendarTop ._2q1Kt {
+	@apply text-sm font-bold text-[#1d1f21] dark:text-white;
 }
 
 ::-webkit-scrollbar {
